--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <style>
 
-      .body {
-      padding-top: 0.5em;
+      body {
+      padding-top: 5em;
       margin-left: 25%;
       width: 50%; }
     </style>
